<resources>
    <string name="app_name">NYTimesClean</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="today">Today</string>
    <string name="top_stories">Top Stories</string>
    <string name="the_new_york_times">The New York Times</string>
    <string name="line">______________________________________________________________</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="content">Content</string>
    <string name="author">Author</string>
    <string name="date">Date</string>
    <string name="link">Link</string>
    <string name="popular">Popular</string>
    <string name="keywords">Keywords</string>
    <string name="sources">Sources</string>
    <string name="url">URL</string>
</resources>