<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="12dp"
    android:orientation="vertical"
    tools:context=".detailsMainPage.MainPageDetailsFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/olondon_"
            android:text="@string/the_new_york_times"
            android:textColor="@color/black"
            android:textSize="32sp" />
    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/text_view_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:text="@string/title"
        android:textSize="20sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/image_view"
        android:layout_width="350dp"
        android:layout_height="350dp"
        android:layout_gravity="center"
        android:padding="4dp" />

    <TextView
        android:id="@+id/text_view_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:text="@string/author"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/text_view_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:text="@string/content"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/text_view_link"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autoLink="web"
        android:padding="4dp"
        android:text="@string/link"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/text_view_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:padding="4dp"
        android:text="@string/date"
        android:textSize="12sp" />


</LinearLayout>